--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "uu": "start-server-and-test start-server http://localhost:3000 uu-test",
     "uu-test": "nav-ally -f ./src/test/carpark/carpark.yml"
   },
-  "author": "",
+  "author": {
+    "name": "Dervis Mansuroglu",
+    "url": "https://github.com/dervism"
+  },
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
