--- a/package.json
+++ b/package.json
@@ -11,19 +11,23 @@
     "uu": "start-server-and-test start-server http://localhost:3000 uu-test",
     "uu-test": "nav-ally -f ./src/test/carpark/accessibility/carpark.yml"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dervism/carparkjs"
+  },
   "author": {
     "name": "Dervis Mansuroglu",
     "url": "https://github.com/dervism"
   },
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4",
+    "body-parser": "1.18.3",
+    "express": "4.16.4",
     "http-server": "0.11.1",
-    "nav-ally": "^1.0.2"
+    "nav-ally": "1.0.8"
   },
   "devDependencies": {
-    "jest": "^23.6.0",
-    "start-server-and-test": "^1.7.10"
+    "jest": "23.6.0",
+    "start-server-and-test": "1.7.11"
   }
 }
