--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test": "jest --coverage",
     "watch": "jest --watchAll --coverage",
     "uu": "start-server-and-test start-server http://localhost:3000 uu-test",
-    "uu-test": "nav-ally -f ./src/test/carpark/accessibility/carpark.yml"
+    "uu:test": "nav-ally -f ./src/test/carpark/accessibility/carpark.yml",
+    "pact:test": "jest --runInBand --setupFiles ./src/test/carpark/pact/pactSetup.js --setupTestFrameworkScriptFile ./src/test/carpark/pact/wrapper.js --testRegex \"/*(.test.pact.js)\"",
+    "pact:publish": "node ./src/test/carpark/pact/publish.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +21,9 @@
     "name": "Dervis Mansuroglu",
     "url": "https://github.com/dervism"
   },
+  "jest": {
+    "testEnvironment": "node"
+  },
   "license": "MIT",
   "dependencies": {
     "body-parser": "1.18.3",
@@ -27,6 +32,8 @@
     "nav-ally": "1.0.8"
   },
   "devDependencies": {
+    "@pact-foundation/pact": "^7.2.0",
+    "axios": "^0.18.0",
     "jest": "23.6.0",
     "start-server-and-test": "1.7.11"
   }
