--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "watch": "jest --watchAll --coverage",
     "uu": "start-server-and-test start-server http://localhost:3000 uu:test",
     "uu:test": "nav-ally -r yes -f ./src/test/carpark/accessibility/carpark.yml",
-    "pact:test": "jest --runInBand --setupFiles ./src/test/carpark/pact/pactSetup.js --setupTestFrameworkScriptFile ./src/test/carpark/pact/wrapper.js --testRegex \"/*(.test.pact.js)\"",
+    "pact:test": "jest --runInBand --setupFiles ./src/test/carpark/pact/pactSetup.js --testRegex \"/*(.test.pact.js)\"",
     "pact:publish": "node ./src/test/carpark/pact/publish.js"
   },
   "repository": {
@@ -26,15 +26,15 @@
   },
   "license": "MIT",
   "dependencies": {
-    "body-parser": "1.18.3",
-    "express": "4.16.4",
+    "body-parser": "1.19.0",
+    "express": "4.17.1",
     "http-server": "0.11.1",
     "nav-ally": "1.3.1"
   },
   "devDependencies": {
     "@pact-foundation/pact": "^8.2.4",
-    "axios": "^0.18.0",
-    "jest": "24.5.0",
-    "start-server-and-test": "1.7.11"
+    "axios": "^0.19.0",
+    "jest": "24.8.0",
+    "start-server-and-test": "1.9.1"
   }
 }
