--- a/package.json
+++ b/package.json
@@ -4,10 +4,20 @@
   "description": "Car Park Example",
   "main": "main.js",
   "scripts": {
-    "start-cli": "node carpark-console-app.js",
-    "start-server": "node carpark-api-server",
+    "clean": "rm -rf dist",
+
+    "----- Bygge og kjøre som en konsoll-app uten frontend -----": "",
+    "build-cli": "npm run clean && parcel build carpark-console-app.js",
+    "start-cli": "npm run build-cli && node dist/carpark-console-app.js",
+
+    "----- Bygge og kjøre med full frontend -----": "",
+    "build": "npm run clean && parcel build site/index.html",
+    "start": "npm run build && node carpark-api-server",
+
+    "----- Enhetstesting med Jest -----": "",
     "test": "jest --coverage",
-    "watch": "jest --watchAll --coverage",
+
+    "----- Universell Utforming testing -----": "",
     "uu": "start-server-and-test start-server http://localhost:3000 uu:test",
     "uu:test": "nav-ally -r yes -f ./src/test/carpark/accessibility/carpark.yml"
   },
@@ -27,7 +37,8 @@
     "body-parser": "1.19.0",
     "express": "4.17.1",
     "http-server": "0.12.0",
-    "nav-ally": "1.5.1"
+    "nav-ally": "1.5.1",
+    "parcel": "^1.12.4"
   },
   "devDependencies": {
     "axios": "^0.19.0",
